[package]
name = "pusz"
version = "0.1.0"
authors = ["fulara"]
edition = "2018"

[dependencies]
inputbot = "0.4.0"

lazy_static = "1.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

glib = "0.8"
gdk = "0.11"

[dependencies.gtk]
version = "0.7.0"
features = ["v3_24"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "std",
    "basetsd",
    "shellapi",
    "winbase",
    "winuser",
    "stringapiset",
    "mmeapi",
    "impl-default"
]