[package]
name = "pusz"
version = "0.1.0"
authors = ["fulara"]
edition = "2018"

[workspace]
members = [
  "pusz_common",
  "plugin_interface",
  "calc_plugin",
]

[dependencies]
plugin_interface = { path = "plugin_interface" }

url = "2.1"
webbrowser = "0.5"

fuzzy-matcher = "0.2"

lazy_static = "1.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

glib = "0.8"
gdk = "0.11"

regex = "1"

libloading = "0.5"

# Just using it for set_clibpoard - could just extract it out and use?
clipboard-win = "2.2.0"

cairo-rs = { version = "^0", features = ["png"] }
[dependencies.gtk]
version = "0.7.0"
features = ["v3_24"]

[dependencies.gio]
version = ""
features = ["v2_44"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "std",
    "basetsd",
    "shellapi",
    "winbase",
    "winuser",
    "stringapiset",
    "mmeapi",
    "errhandlingapi",
    "impl-default"
]