[package]
name = "calc_plugin"
version = "0.1.0"
authors = ["fulara <ntszar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "calc_plugin"
crate-type = ["dylib", "rlib"]

[dependencies]
plugin_interface = {path = "../plugin_interface"}

meval = "0.2.0"