[package]
name = "store_plugin"
version = "0.1.0"
authors = ["fulara <ntszar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "store_plugin"
crate-type = ["cdylib"]

[dependencies]
plugin_interface = {path = "../plugin_interface"}

tantivy = "0.11"